testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_single_line_string/case3.expect.out
error: unterminated string interpolation
  ==> case3.cj:15:19:
   | 
15 |     var b = "cangjie ${
   |                      ^^^ unterminated string interpolation
   | 

1 error generated, 1 error printed.
